# SymMFEA-V2

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Conanfile.txt  build.sh  build_test.sh  main.cpp  run.sh  test.sh
include/central_units/: id_allocator.h  individual_infos.h
include/components/: primitive.h  tree.h
include/components/DataUtils/: data_pool.h  data_view.h  utils.h
include/components/data_utils/: data_loader.h  data_view.h
include/components/functions/: Operand.h  add.cpp  aq.h  cosine.h  node.cpp  node.h  polynominal.h  product.h  relu.h  silu.h  sum.h  tanh.h
include/components/trainer/: gradient_optimizer.h  trainer.h
include/components/trainer/loss/: loss.h  mse.h
include/components/trainer/metrics/: metrics.h  r2.h
include/components/tree/: tree.h  tree_handler.h
include/evolution/: ranker.h  selector.h
include/evolution/algorithms/: GA.h  worker.h
include/evolution/population/: individual.h  population.h  red_black_tree.h  sub_population.h
include/evolution/reproducer/: crossover.h  mating_controller.h  mutation.h  reproducing_controller.h  tree_spec.h  variant.h
include/evolution/reproducer/crossover/: subtree.h
include/evolution/reproducer/mutation/: growbranch.h
include/metrics/: metrics.h  r2.h
include/utils/: array_utils.h  mutex.h  progress_bar.h  random_utils.h  timer.h
source/central_units/: id_allocator.cpp  individual_infos.cpp
source/components/: primitive.cpp  tree.cpp
source/components/DataUtils/: data_pool.cpp  data_view.cpp  utils.cpp
source/components/data_utils/: data_loader.cpp  data_pool.cpp  data_view.cpp  utils.cpp
source/components/functions/: add.h  aq.cpp  cosine.cpp  node.cpp  node.h  operand.cpp  polynominal.cpp  product.cpp  relu.cpp  silu.cpp  sum.cpp  tanh.cpp
source/components/trainer/: gradient_optimizer.cpp  trainer.cpp
source/components/trainer/loss/: mse.cpp
source/components/trainer/metrics/: r2.cpp
source/components/tree/: tree.cpp  tree_handler.cpp
source/evolution/: ranker.cpp  selector.cpp
source/evolution/algorithms/: GA.cpp  worker.cpp
source/evolution/population/: individual.cpp  population.cpp  red_black_tree.cpp  sub_population.cpp
source/evolution/reporducer/: crossover.cpp
source/evolution/reporducer/crossover/: subtree.cpp
source/evolution/reproducer/: crossover.cpp  mating_controller..cpp  mutation.cpp  reproducing_controller.cpp  tree_spec.cpp  variant.cpp
source/evolution/reproducer/crossover/: subtree.cpp
source/evolution/reproducer/mutation/: growbranch.cpp
source/metrics/: r2.cpp
source/utils/: array_utils.cpp  progress_bar.cpp  random_utils.cpp
tests/: node.cpp  red_black_tree.cpp
